@@ -20,6 +20,8 @@ Bug fixes:
    old apport-gtk.desktop that wasn't even being installed. With that, the
    window will be shown as "Report a problem..." instead of "Apport-gtk" in
    GNOME shell and other DEs. Thanks Jeremy Bicha. (LP: #1207496)
+ * report.py, add_gdb_info(): Fix crash if gdb cannot load the symbol map.
+   (LP: #1171484)
 
 2.11 (2013-07-17)
 -----------------
